--- a/code/session_1.Rmd
+++ b/code/session_1.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "1_session"
+title: "session_1"
 author: "Julian Maitra"
 date: "2024-02-05"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ## R Markdown
@@ -28,5 +28,3 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
-This is a test
