--- a/index.qmd
+++ b/index.qmd
@@ -14,6 +14,10 @@ copyright:
   year: 2024
 format: html
 editor: visual
+toc: true
+toc-depth: 2
+toc-location: left
+    
 ---
 
 # Session 1
@@ -365,3 +369,5 @@ textuelles et logiques dans le même vecteur !
 
 -   Essayez de résoudre vous-même les éventuels messages d'erreur en
     adaptant le code.
+
+# Session 2
