--- a/index.qmd
+++ b/index.qmd
@@ -585,6 +585,8 @@ textuel, logique).
 Créons un data frame avec la fonction `data.frame()` maintenant. Nous
 appelons ce type d'objets désormais un **jeu de données**.
 
+![Le film Âge de glace [Source : wikimedia.org](https://upload.wikimedia.org/wikipedia/en/2/24/Ice_Age_Dawn_of_the_Dinosaurs_theatrical_poster.jpg)
+
 ```{r}
 #| echo: true
 #| output: false
