--- a/index.qmd
+++ b/index.qmd
@@ -891,8 +891,47 @@ correctement défini avec la fonction `getwd()`
 
 # Session 3 (Problem Set 1)
 
-Les résultats du **Problem Set 1** sont accéssibles sur la page Moodle
+Les résultats du **Problem Set 1** (bonnes réponses, échelle des notes) sont accéssibles sur la page Moodle
 de l'exercices.
+
+Voici l'histogramme des points obtenus par n = 81 étudiant.es qui ont participé au Problem Set 1. Le nombre maximal de points était de 20, il fallait 10 pour passer le test.
+
+```{r}
+#| echo: false
+#| output: true
+#| warning: false
+# script pour faire un histogramme des points obtenus dans le Problem Set 1
+# cours : Exercices Méthodes II
+# date : 6/7 mars 2024
+# auteur : Julian Maitra
+
+library(ggplot2)
+
+# Adaptez le code suivant pour votre répertoire de travail :
+
+setwd("/Users/domus_julian/Documents/GitHub/intro-a-R/code")
+
+# Enregistrez le fichier CSV points_ps_2 dans votre répertoire de travail, 
+# puis importez les données dans R (modifiez le code suivant selon votre ordinateur) :
+
+points_ps_1 <- read.csv("~/Documents/GitHub/intro-a-R/code/points_PS_1.csv", encoding="UTF-8")
+
+#points_ps_1 # il y a 81 observations de trois variables : etudiant.e, groupe et points
+
+hist_ps_1 <-ggplot(points_ps_1, 
+                   aes(x=points)) + 
+  geom_histogram(binwidth = 1, color="black", fill="white") +
+  labs(title = "Histogramme des points obtenus dans le PS 1", # labs() permet de définir plusieurs labels en même temps (titre, axes, etc.)
+       subtitle = "n = 81 résultats de test", 
+       caption = "Source des données : Moodle") +       
+  xlab("Points obtenus") +                             
+  ylab("Fréquence") + 
+  scale_x_continuous(breaks=seq(1, 20, 1)) + # cette couche définit les unité de l'axe x
+  scale_y_continuous(breaks=seq(0, 20, 2)) + # cette couche définit les unité de l'axe x
+  theme_minimal() 
+hist_ps_1
+```
+
 
 # Session 4
 
