--- a/index.qmd
+++ b/index.qmd
@@ -1122,6 +1122,11 @@ siècle.
 
 <a title="Diego Mariano, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Flores_de_%C3%8Dris.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flores_de_%C3%8Dris.png/512px-Flores_de_%C3%8Dris.png" alt="Flores de Íris" width="512"/></a>
 
+Il y a des statistiques sur trois espèces d'iris dans le jeu de données  [Source :
+wikimedia.org](https://commons.wikimedia.org/wiki/File:Flores_de_Íris.png)
+
+
+
 Dans l'apprentissage de R, ce jeu de données est souvent utilisé pour
 illustrer diverses techniques d'analyse de données, y compris le
 clustering, la classification et la visualisation.
